Fix playground overflowing out of viewport

--- a/src/styles/_ide.scss
+++ b/src/styles/_ide.scss
@@ -6,11 +6,6 @@
     height: 85vh;
   }
 
-  .repl-parent {
-    padding-right: 0px;
-    padding-left: 0px;
-  }
-
   .pt-card {
     font-family: Monospace;
     white-space: pre-line;
