--- a/src/styles/_playground.scss
+++ b/src/styles/_playground.scss
@@ -1,7 +1,6 @@
 .Playground {
     display: flex;
     flex-direction: column;
-    height: 100vh;
 }
 
 .Playground__main {
